--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,22 @@
 
 /* estilos que se entregarán a la función setActiveClass  */
 .active {
-  color: darkgreen;
+  color: gold;
+  padding-right: 10px;
 }
 
 .inactive {
-  color: blue;
+  color: white;
+  padding-right: 10px;
+}
+
+.navigation {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  background-color: red;
 }
