--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,16 @@
+
+
 .App {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   text-align: center;
   justify-content: center;
+  background-color: whitesmoke;
+/* usar toda la pantalla */
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 15px;;
 }
 
 /* estilos que se entregarán a la función setActiveClass  */
@@ -24,4 +33,9 @@
   padding: 0;
   list-style: none;
   background-color: red;
+}
+
+img {
+  width: 100%;
+  height: auto;
 }
